--- a/XpLyfe/XpLyfe/Base.lproj/Main.storyboard
+++ b/XpLyfe/XpLyfe/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,33 +15,45 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="XpLyfe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uD5-ot-Csq">
-                                <rect key="frame" x="35" y="232" width="305" height="30"/>
+                                <rect key="frame" x="35" y="232" width="344" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z2v-30-iQM">
-                                <rect key="frame" x="35" y="282" width="305" height="30"/>
+                                <rect key="frame" x="35" y="282" width="344" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XpLyfe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="45" translatesAutoresizingMaskIntoConstraints="NO" id="jTi-d9-2Ko">
-                                <rect key="frame" x="55" y="100" width="265" height="108"/>
+                                <rect key="frame" x="55.666666666666657" y="100" width="303.33333333333337" height="108"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="90"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GC7-DE-7J6">
-                                <rect key="frame" x="35" y="332" width="305" height="30"/>
+                                <rect key="frame" x="35" y="332" width="344" height="30"/>
                                 <state key="normal" title="Login"/>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot your login details? Get help logging in" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="80i-30-Ed0">
-                                <rect key="frame" x="35" y="386" width="305" height="21.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot your login details? Get help logging in" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="80i-30-Ed0">
+                                <rect key="frame" x="35" y="386" width="344" height="43"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OR" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="12h-1X-Akv">
+                                <rect key="frame" x="175.66666666666666" y="449" width="63.333333333333343" height="22"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log in With Facebook" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="XJd-Eh-NHN">
+                                <rect key="frame" x="100" y="491" width="214" height="22"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -50,6 +62,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Z2v-30-iQM" firstAttribute="top" secondItem="uD5-ot-Csq" secondAttribute="bottom" constant="20" id="0lF-BG-ie9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XJd-Eh-NHN" secondAttribute="trailing" constant="100" id="20e-86-Dav"/>
                             <constraint firstItem="GC7-DE-7J6" firstAttribute="top" secondItem="Z2v-30-iQM" secondAttribute="bottom" constant="20" id="2zd-uF-Guo"/>
                             <constraint firstItem="jTi-d9-2Ko" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="55" id="4cf-Dw-RCz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GC7-DE-7J6" secondAttribute="trailing" constant="35" id="4db-N5-D5t"/>
@@ -57,15 +70,20 @@
                             <constraint firstItem="80i-30-Ed0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="35" id="A4c-2g-Bqx"/>
                             <constraint firstItem="Z2v-30-iQM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="L5C-Nl-hQC"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jTi-d9-2Ko" secondAttribute="trailing" constant="55" id="L5a-P7-Y3X"/>
+                            <constraint firstItem="12h-1X-Akv" firstAttribute="top" secondItem="80i-30-Ed0" secondAttribute="bottom" constant="20" id="NOs-8d-BHi"/>
                             <constraint firstItem="uD5-ot-Csq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="Sk5-D4-7zV"/>
+                            <constraint firstItem="XJd-Eh-NHN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="U46-4G-mAg"/>
                             <constraint firstItem="GC7-DE-7J6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="Wwu-kY-Dpx"/>
                             <constraint firstItem="uD5-ot-Csq" firstAttribute="top" secondItem="jTi-d9-2Ko" secondAttribute="bottom" constant="24" id="cUe-PJ-sCB"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Z2v-30-iQM" secondAttribute="trailing" constant="35" id="daO-ht-Jmg"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Z2v-30-iQM" secondAttribute="trailing" constant="35" id="eVH-5x-xC6"/>
                             <constraint firstItem="Z2v-30-iQM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="gqa-HX-J5H"/>
+                            <constraint firstItem="12h-1X-Akv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="175" id="kVQ-aK-W2O"/>
+                            <constraint firstItem="XJd-Eh-NHN" firstAttribute="top" secondItem="12h-1X-Akv" secondAttribute="bottom" constant="20" id="leB-Mh-oF3"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="80i-30-Ed0" secondAttribute="trailing" constant="35" id="u2I-NJ-asF"/>
                             <constraint firstItem="80i-30-Ed0" firstAttribute="top" secondItem="GC7-DE-7J6" secondAttribute="bottom" constant="24" id="uxS-Lc-nEX"/>
                             <constraint firstItem="jTi-d9-2Ko" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="80" id="v5j-Z9-gKY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="12h-1X-Akv" secondAttribute="trailing" constant="175" id="xEz-tO-4gu"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
