--- a/XpLyfe/XpLyfe/Base.lproj/Main.storyboard
+++ b/XpLyfe/XpLyfe/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,45 +15,57 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="XpLyfe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uD5-ot-Csq">
-                                <rect key="frame" x="35" y="232" width="344" height="30"/>
+                                <rect key="frame" x="35" y="232" width="305" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z2v-30-iQM">
-                                <rect key="frame" x="35" y="282" width="344" height="30"/>
+                                <rect key="frame" x="35" y="282" width="305" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XpLyfe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="45" translatesAutoresizingMaskIntoConstraints="NO" id="jTi-d9-2Ko">
-                                <rect key="frame" x="55.666666666666657" y="100" width="303.33333333333337" height="108"/>
+                                <rect key="frame" x="55.5" y="100" width="264.5" height="108"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="90"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GC7-DE-7J6">
-                                <rect key="frame" x="35" y="332" width="344" height="30"/>
+                                <rect key="frame" x="35" y="332" width="305" height="30"/>
                                 <state key="normal" title="Login"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot your login details? Get help logging in" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="80i-30-Ed0">
-                                <rect key="frame" x="35" y="386" width="344" height="43"/>
+                                <rect key="frame" x="35" y="386" width="305" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OR" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="12h-1X-Akv">
-                                <rect key="frame" x="175.66666666666666" y="449" width="63.333333333333343" height="22"/>
+                                <rect key="frame" x="175.5" y="449" width="24.5" height="22"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log in With Facebook" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="XJd-Eh-NHN">
-                                <rect key="frame" x="100" y="491" width="214" height="22"/>
+                                <rect key="frame" x="100" y="491" width="175" height="22"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="bPq-Mk-q8Y">
+                                <rect key="frame" x="35" y="626" width="189" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign up." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TaS-On-xl0">
+                                <rect key="frame" x="274" y="625" width="66" height="22"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -68,9 +80,12 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GC7-DE-7J6" secondAttribute="trailing" constant="35" id="4db-N5-D5t"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uD5-ot-Csq" secondAttribute="trailing" constant="35" id="9Ma-cN-05Q"/>
                             <constraint firstItem="80i-30-Ed0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="35" id="A4c-2g-Bqx"/>
+                            <constraint firstItem="bPq-Mk-q8Y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="GCA-14-GhE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TaS-On-xl0" secondAttribute="trailing" constant="35" id="Jte-Ko-lxv"/>
                             <constraint firstItem="Z2v-30-iQM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="L5C-Nl-hQC"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jTi-d9-2Ko" secondAttribute="trailing" constant="55" id="L5a-P7-Y3X"/>
                             <constraint firstItem="12h-1X-Akv" firstAttribute="top" secondItem="80i-30-Ed0" secondAttribute="bottom" constant="20" id="NOs-8d-BHi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TaS-On-xl0" secondAttribute="bottom" constant="20" id="OJp-eL-iks"/>
                             <constraint firstItem="uD5-ot-Csq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="Sk5-D4-7zV"/>
                             <constraint firstItem="XJd-Eh-NHN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="U46-4G-mAg"/>
                             <constraint firstItem="GC7-DE-7J6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="Wwu-kY-Dpx"/>
@@ -78,8 +93,10 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Z2v-30-iQM" secondAttribute="trailing" constant="35" id="daO-ht-Jmg"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Z2v-30-iQM" secondAttribute="trailing" constant="35" id="eVH-5x-xC6"/>
                             <constraint firstItem="Z2v-30-iQM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="gqa-HX-J5H"/>
+                            <constraint firstItem="bPq-Mk-q8Y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="hV2-bZ-HYo"/>
                             <constraint firstItem="12h-1X-Akv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="175" id="kVQ-aK-W2O"/>
                             <constraint firstItem="XJd-Eh-NHN" firstAttribute="top" secondItem="12h-1X-Akv" secondAttribute="bottom" constant="20" id="leB-Mh-oF3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bPq-Mk-q8Y" secondAttribute="bottom" constant="20" id="rGM-PX-2l7"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="80i-30-Ed0" secondAttribute="trailing" constant="35" id="u2I-NJ-asF"/>
                             <constraint firstItem="80i-30-Ed0" firstAttribute="top" secondItem="GC7-DE-7J6" secondAttribute="bottom" constant="24" id="uxS-Lc-nEX"/>
                             <constraint firstItem="jTi-d9-2Ko" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="80" id="v5j-Z9-gKY"/>
